# diagram2drawio

./: PROMPT.md  README.md  output.drawio  pyproject.toml
AGENTS/: AGENTS.md
src/diagram2drawio/: __init__.py  __main__.py  api.py  cli.py  config.py  ir.py
src/diagram2drawio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/diagram2drawio/export/: __init__.py  drawio.py
src/diagram2drawio/pipeline/: __init__.py  arrowheads.py  associate.py  connectors.py  labels.py  ocr.py  preprocess.py  shapes.py  text_mask.py
tests/: test_export.py  test_ir.py
